Attempt to fix horizontal scrollbar

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -33,7 +33,7 @@
   align-items: center;
   color: white;
   text-align: center;
-  width: 100vw;
+  max-width: 100%;
   margin: 0;
 }
 
